--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,13 +24,14 @@
     "baseUrl": "src",
     "paths": {
       "@modules": ["./modules/index"],
+      "@components": ["./components/index"],
       "@ui-kit": ["./ui-kit/index"],
       "@images/*": ["./assets/images/*"],
       "@pages": ["./pages/index"],
       "@hooks": ["./hooks/index"],
       "@api": ["./api/index"],
-      "@models": ["./models/index"]
-
+      "@models": ["./models/index"],
+      "@context": ["./context/index"]
     }
   },
   "include": ["src"],
